packages/core/src/lib/middleware/tests/app/modules/error/controllers/site/errorHandlerTest/errorInSync.js
const jest = require('jest-mock');
module.exports = jest.fn((request, response, stack) => {
  throw new Error('Error in sync');
})
